# sokort

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
config/: config.yaml  load_ncl_env.sh  load_python_env.sh
config/systems/: cma_gfs_gmf.yaml  cma_meso_3km.yaml  grapes_gfs_gmf.yaml  grapes_meso_3km.yaml  grapes_tym.yaml
doc/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_sources/: api.rst.txt  index.rst.txt
doc/_sources/usage/: quickstart.ipynb.txt
doc/source/: conf.py  index.rst
doc/source/usage/: cli.rst  config.rst  installation.rst  notebook.ipynb  quickstart.ipynb
doc/usage/: cli.html  config.html  installation.html  notebook.html  quickstart.html  quickstart.ipynb
example/grapes_gfs_gmf/: an_aea.ipynb  fc_aea.ipynb  fc_aeua.ipynb  fc_ahne.ipynb  gams.ipynb  ui.ipynb
example/grapes_meso_3km/: meso_3km.ipynb  meso_area.ipynb  meso_cn.ipynb  meso_diag.ipynb  ui.ipynb
nwpc_graphics/: __init__.py  _config.py  _main.py  _plotter.py  _presenter.py  _util.py  load_env.sh  logging.py
nwpc_graphics/systems/grapes_gfs_gmf/: __init__.py  _plotter.py  load_env.sh  plotter.py  pwat_sfc_an_aea.py  pwat_sfc_an_aea.sh  run_ncl.sh  util.py
nwpc_graphics/systems/grapes_meso_3km/: __init__.py  _plotter.py  plotter.py  run_ncl.sh
nwpc_graphics/tool/: __init__.py
sokort/: __init__.py  __main__.py  _config.py  _data_finder.py  _loader.py  _logging.py  _plotter.py  _presenter.py  _util.py  _version.py  config.py  convert_image.sh  interface.py  util.py
sokort/data_source/: cmadaas.py
sokort/source/: cmadaas.py  cmadaas.yaml
sokort/systems/grapes_gfs_gmf/: __init__.py  _plotter.py  python_plotter.py  run_ncl.sh
sokort/systems/grapes_meso_3km/: __init__.py  _plotter.py  run_ncl.sh
sokort/systems/grapes_tym/: __init__.py  _plotter.py  run_ncl.sh
sokort/tool/: __init__.py
src/sokort/: _data_finder.py  _loader.py  _plotter.py  _version.py  interface.py  load_env.sh  util.py
src/sokort/data_source/: cmadaas.py  cmadaas.yaml
src/sokort/tool/: __init__.py
test/manual/gfs/: pwat_sfc_an_aea.py  (+1 more)
tool/cma-hpc2023/: activate.sh
tool/cma-pi/: activate.sh
tool/docker/: README.md
tool/storage/: activate.sh
(+1198 files in other folders)
